deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-starter
  labels:
    app.kubernetes.io/name: go-api-starter
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: go-api-starter
